--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,47 @@
-#header li {
-    display: inline
-}
+ .navigation {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0.5rem 2rem;
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
+
+      .logo {
+        width: 80px;
+        height: 40px;
+      }
+
+      .list {
+        display: flex;
+        list-style: none;
+        position: absolute;
+        top: 0;
+        right: 0;
+      }
+
+      .item {
+        width: 40px;
+        height: 40px;
+        margin-left: 1.5rem;
+        color: black;
+        font-size: 1.1rem;
+        padding: 0.5rem;
+      }
+      .header {
+        height: 100vh;
+      }
+      #search-box{
+        display: flex;
+        list-style: none;
+        flex-direction: row;     /* make main axis horizontal (default setting) */
+        justify-content: center; /* center items horizontally, in this case */
+       
+        height: 24px;
+        
+    }
+    #main-video {
+        width: 320px;
+        height: 240px;
+    }
