--- a/css/style.css
+++ b/css/style.css
@@ -1,46 +1,52 @@
- .navigation {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 0.5rem 2rem;
-        position: absolute;
-        top: 0;
-        left: 0;
-      }
+.navigation {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem 2rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
 
-      .logo {
-        width: 80px;
-        height: 40px;
-      }
+.logo {
+  width: 80px;
+  height: 40px;
+}
 
-      .list {
-        display: flex;
-        list-style: none;
-        position: absolute;
-        top: 0;
-        right: 0;
-      }
+.list {
+  display: flex;
+  list-style: none;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
 
-      .item {
-        width: 40px;
-        height: 40px;
-        margin-left: 1.5rem;
-        color: black;
-        font-size: 1.1rem;
-        padding: 0.5rem;
-      }
-      .header {
-        height: 100vh;
-      }
-      #search-box{
-        display: flex;
-        list-style: none;
-        flex-direction: row;     /* make main axis horizontal (default setting) */
-        justify-content: center; /* center items horizontally, in this case */
-       
-        height: 24px;
-        
-    }
-    #main-video {
-        
-    }
+.item {
+  width: 40px;
+  height: 40px;
+  margin-left: 1.5rem;
+  color: black;
+  font-size: 1.1rem;
+  padding: 0.5rem;
+}
+.header {
+  height: 100vh;
+}
+#search-box {
+  display: flex;
+  list-style: none;
+  flex-direction: row; /* make main axis horizontal (default setting) */
+  justify-content: center; /* center items horizontally, in this case */
+
+  height: 24px;
+}
+
+.header-box {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 40%;
+  text-align: center;
+  padding: 1rem 1.3rem;
+}
