--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,10 @@
 
   height: 24px;
 }
-
+.header-title{
+    text-align: left;
+    
+}
 .header-box {
   position: absolute;
   left: 50%;
@@ -49,4 +52,20 @@
   width: 40%;
   text-align: center;
   padding: 1rem 1.3rem;
+}
+#list-of-video-features{
+    display: flex;
+    list-style: none;
+}
+.video-options{
+    position: absolute;
+    left: 73%;
+    top: 80%;
+    transform: translate(-50%, -50%);
+    width: 40%;
+}
+.icon-buttons{
+    padding-top: 7px;
+    width: 20px;
+    height: 20px;
 }
