--- a/css/style.css
+++ b/css/style.css
@@ -40,9 +40,8 @@
 
   height: 24px;
 }
-.header-title{
-    text-align: left;
-    
+.header-title {
+  text-align: left;
 }
 .header-box {
   position: absolute;
@@ -53,19 +52,33 @@
   text-align: center;
   padding: 1rem 1.3rem;
 }
-#list-of-video-features{
-    display: flex;
-    list-style: none;
+#list-of-video-features {
+  display: flex;
+  list-style: none;
 }
-.video-options{
-    position: absolute;
-    left: 73%;
-    top: 80%;
-    transform: translate(-50%, -50%);
-    width: 40%;
+.video-options {
+  position: absolute;
+  left: 73%;
+  transform: translate(-50%, -50%);
 }
-.icon-buttons{
-    padding-top: 7px;
-    width: 20px;
-    height: 20px;
+.icon-buttons {
+  padding-top: 7px;
+  width: 20px;
+  height: 20px;
+}
+
+.user {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 70%;
+}
+.user__avatar {
+  width: 20%;
+}
+.user__name {
+  width: 30%;
+}
+.user__avatar-img {
+  border-radius: 50%;
 }
