--- a/css/style.css
+++ b/css/style.css
@@ -30,22 +30,21 @@
   padding: 0.5rem;
 }
 .header {
-  
   height: 100px;
 }
 #search-box__menu-icon {
   display: flex;
   list-style: none;
-  flex-direction: row; 
-  justify-content: center; 
+  flex-direction: row;
+  justify-content: center;
 
   height: 24px;
 }
 .header-title {
   text-align: left;
 }
-.main-content{
-    background-color: brown; 
+.main-content {
+  /* background-color: brown; */
   position: absolute;
   left: 50%;
   top: 80%;
@@ -69,11 +68,10 @@
   height: 20px;
 }
 
-
 .user {
   display: flex;
   justify-content: left;
-  align-items: flex-start ;
+  align-items: flex-start;
   width: 70%;
 }
 .user__avatar {
@@ -86,18 +84,35 @@
   border-radius: 50%;
 }
 .aside-related-videos {
-    text-align: right;
-    position: absolute;
+  text-align: right;
+  position: absolute;
   left: 86%;
   top: 129%;
   transform: translate(-50%, -50%);
-    background-color: blueviolet;
-    margin-top: 80px;
+  /* background-color: blueviolet; */
+  margin-top: 80px;
 }
 
-.related-videos li{
- list-style: none;
- width:168;
- height: 94;
+.related-videos li {
+  list-style: none;
+  width: 168;
+  height: 94;
 }
 
+.user-subscribe {
+  display: flex;
+  padding: 2rem;
+  justify-content: center;
+  align-items: center;
+}
+
+.subscribe-button {
+  justify-content: center;
+  align-items: center;
+}
+.subscribe-btn {
+  background-color: #cc0000;
+  color: white;
+  padding: 0.5rem;
+  border: 0;
+}
